[-] FO: fixed IE8 Adding Address Problem + improve line-height input on IE - #PSCFV-6401

--- a/themes/default/css/global.css
+++ b/themes/default/css/global.css
@@ -1451,7 +1451,8 @@ form#add_adress {}
 	width:360px;/* 370 */
 	border:1px solid #ccc;
 	font-size: 12px;
-	color:#666
+	color:#666;
+	line-height:22px
 }
 #add_adress p.checkbox input {
 	margin-left:260px;
